The file which I stored in PSD file format in Blender cannot open by Photoshop. #37080

Closed
opened 2013-10-15 02:01:18 +02:00 by perfection cat · 11 comments

%%%--- Operating System, Graphics card ---
Windows XP/SP3 32bits
Nvidia GEForce 9500GT 512MB

- Blender version with error, and version that worked ---

Blender official site daily build version
blender-2.69-r60739-win32.zip

- Short description of error ---

The file which I stored in PSD file format in Blender cannot open by Photoshop.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I opened the file of the PNG form in Blender and output it in PSD form.
I was going to open the file by Photoshop, but Photoshop gives the following error message and cannot open it up.

Error message of Photoshop:
Could not complate your request bacause it is not a valid Photoshop document.

I attached two files.
Thanks.png: Original PNG file.
Thanks.psd: The PSD file which I output in Blender.%%%

%%%--- Operating System, Graphics card --- Windows XP/SP3 32bits Nvidia GEForce 9500GT 512MB - Blender version with error, and version that worked --- Blender official site daily build version blender-2.69-r60739-win32.zip - Short description of error --- The file which I stored in PSD file format in Blender cannot open by Photoshop. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I opened the file of the PNG form in Blender and output it in PSD form. I was going to open the file by Photoshop, but Photoshop gives the following error message and cannot open it up. Error message of Photoshop: Could not complate your request bacause it is not a valid Photoshop document. I attached two files. Thanks.png: Original PNG file. Thanks.psd: The PSD file which I output in Blender.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%It is file format of PSD which the following sites show in Adobe official site.

http://www.adobe.com/devnet-apps/photoshop/fileformatashtml/

It is like the totally different form when I check the file header of PSD file made in Blender.%%%

%%%It is file format of PSD which the following sites show in Adobe official site. http://www.adobe.com/devnet-apps/photoshop/fileformatashtml/ It is like the totally different form when I check the file header of PSD file made in Blender.%%%

%%%That one is for you, Dalai. ;)

Maybe actually an OIIO bug? But anyway, does it make any sense to export PSDs from Blender???%%%

%%%That one is for you, Dalai. ;) Maybe actually an OIIO bug? But anyway, does it make *any* sense to export PSDs from Blender???%%%
Author

%%%It is 'save as image' not export.
It is not me to decide whether it has a meaning.
Because the method was offered, I only tried it.
And I reported it because it did not act definitely.%%%

%%%It is 'save as image' not export. It is not me to decide whether it has a meaning. Because the method was offered, I only tried it. And I reported it because it did not act definitely.%%%
Author

%%%I think that it is not bug of oiio.
The function storing of psd is not made to a library of OpenImageIO, and the save function of PSD is not registered with blender.%%%

%%%I think that it is not bug of oiio. The function storing of psd is not made to a library of OpenImageIO, and the save function of PSD is not registered with blender.%%%

%%%Eeeeh… I’m not saying you are wrong reporting this bug! Jut saying that imho, we should not have this option, it does not make much sense… ;)

%%%

%%%Eeeeh… I’m not saying you are wrong reporting this bug! Jut saying that imho, we should not have this option, it does not make much sense… ;) %%%
Author

%%%I'm sorry.
I understood the meaning that you said.
When machine-translated it, was sometimes wrong; is meant.
It misunderstands the nuance of delicate words.%%%

%%%I'm sorry. I understood the meaning that you said. When machine-translated it, was sometimes wrong; is meant. It misunderstands the nuance of delicate words.%%%
Author

%%%I'm sorry.
I understood the meaning that you said.
The machine translation sometimes misunderstands the nuance of delicate words.%%%

%%%I'm sorry. I understood the meaning that you said. The machine translation sometimes misunderstands the nuance of delicate words.%%%

%%%PSD should not be listed in the output file formats list, that is a bug, we don't support saving such files.%%%

%%%PSD should not be listed in the output file formats list, that is a bug, we don't support saving such files.%%%

%%%Blender was saving a jpg when you picked the PSD. fixed in rev. 60776 (by removing PSD from the file formats list).
Thanks for the report%%%

%%%Blender was saving a jpg when you picked the PSD. fixed in rev. 60776 (by removing PSD from the file formats list). Thanks for the report%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37080
No description provided.