removing PSD from the fileformat list fix [#37080] The file which I stored in PSD file format in Blender cannot open by Photoshop PSD writing is not supported at the moment